# LSC-ncRNA

./: .gitignore  README.md  README_new_work_progress.md  ReadMe2_inConstruction.md  blast_classification.py  clans_dataset.py  fixed_nbF_5_is_del_no_min_2_max_2_sameFamilyPct_0_occVarTol_-1_nbOccrs_1.csv  fixed_nbF_5_is_del_no_min_2_max_4_sameFamilyPct_0_occVarTol_-1_nbOccrs_1.csv  requirements.txt  tools.py
Classification/: Main.py  Secondary_noSecondary_trainTest_results_EXT.csv  model.py  modelstest.py
LSC-ncRNA-our_method/MotifsExtractionSelection/: CMakeLists.txt  CommonMotifs.cpp  CommonMotifs.h  FastaFilesReader.cpp  FastaFilesReader.h  Main.cpp  MotifsExtractionSelection  Node.h  Old_CommonMotifs.h  PrintTree.h  SequenceIdManager.cpp  SequenceIdManager.h  SubSetDistancePercentage.h  SuffixTree_QuadraticTime.cpp  SuffixTree_QuadraticTime.h
MotifsExtractionSelection/: CMakeLists.txt  CommonMotifs.cpp  CommonMotifs.h  FastaFilesReader.cpp  FastaFilesReader.h  Main.cpp  Old_CommonMotifs.cpp  SuffixTree_QuadraticTime.cpp  hasher_Container.h
ParseResultInfernal/: FastaFilesReader.h  main.cpp
constructTrainTestFiles/: FastaFilesReader.cpp  FastaFilesReader.h  Utile.h  compute_scaling_distribution_dataset_sample.py  compute_split_dataset.py  main.cpp
datasets/: All_Rfam_14point1_seed_ncRNA_Families_infos.xlsx  clans_dataset.py  compute_scaling_distribution_dataset_sample.csv  compute_scaling_distribution_dataset_sample.xlsx
experiments/: ReadMe.md
experminents_results/: alpha_experiments_results.json  beta_experiments_results.json  paper_exeperiments.py  (+3 more)
(+3049 files in other folders)
